--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.12.6",
     "fastclick": "^1.0.6",
+    "js-base64": "^2.4.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.1.2",
